--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
             <td>价格</td>
             <td>备注</td>
         </tr>
-        <tr th:each="bill :${bills}">
+        <tr th:each="bill :${pageInfo.list}">
             <td th:text="${bill.id}"></td>
             <td th:text="${bill.title}">标题</td>
             <td th:text="${#dates.format(bill.billTime,'yyyy-MM-dd')}">日期</td>
@@ -22,6 +22,12 @@
             <td th:text="${bill.explaine}">备注</td>
         </tr>
     </table>
+
+    <p>当前 <span th:text="${pageInfo.pageNum}"></span> 页,总 <span th:text="${pageInfo.pages}"></span> 页,共 <span th:text="${pageInfo.total}"></span> 条记录</p>
+    <a th:href="@{/jizhang/list}">首页</a>
+    <a th:href="@{/jizhang/list(pageNum=${pageInfo.hasPreviousPage}?${pageInfo.prePage}:1)}">上一页</a>
+    <a th:href="@{/jizhang/list(pageNum=${pageInfo.hasNextPage}?${pageInfo.nextPage}:${pageInfo.pages})}">下一页</a>
+    <a th:href="@{/jizhang/list(pageNum=${pageInfo.pages})}">尾页</a>
 </center>
 </body>
 </html>
